fix: scrollbar always visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,10 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
 body {
   font-family: 'Lenster', Helvetica, Arial, sans-serif;
-
+  @apply overflow-y-scroll;
   @apply bg-gray-50;
   @apply dark:bg-black;
 }
